# CICFlowMeter

./: .gitignore  BUILD.md  README.md  build.gradle  pom.xml  run_with_java8.sh
python/: README.md  pyproject.toml
python/cicflowmeter/: __init__.py  ancillary.py  basic_flow.py  basic_packet_info.py  cli.py  clustering.py  date_formatter.py  flow_feature.py  flow_generator.py  id_generator.py  listeners.py  live_capture.py  packet_reader.py  pcap_compat.py  summary_statistics.py  utils.py
python/cicflowmeter/qtui/: __init__.py  analytics.py  app.py  batch_history.py  batch_outputs.py  batch_runner.py  flow_model.py  flow_rate.py  live_capture.py  main_window.py  types.py
python/docs/: python_parity_todo.md
python/tests/: test_ancillary.py  test_basic_flow.py  test_basic_packet_info.py  test_cli.py  test_clustering.py  test_flow_generator.py  test_live_capture.py  test_packet_reader.py  test_pcap_compat.py
src/main/java/cic/cs/unb/ca/ifm/: Cmd.java
