[tool.poetry]
name = "cicflowmeter"
version = "0.1.0"
description = "Python translation of CICFlowMeter core flow parsing utilities"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [
    { include = "cicflowmeter" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dpkt = "^1.9.8"
scapy = { version = "^2.5.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.extras]
live = ["scapy"]

[tool.poetry.scripts]
cicflowmeter = "cicflowmeter.cli:main"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
