[tool.poetry]
name = "cicflowmeter"
version = "0.1.0"
description = "Python translation of CICFlowMeter core flow parsing utilities"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [
    { include = "cicflowmeter" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dpkt = "^1.9.8"
numpy = "^2.1.2"
scapy = { version = "^2.5.0", optional = true }
PySide6 = { version = "^6.9.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.extras]
live = ["scapy"]
gui = ["PySide6"]

[tool.poetry.scripts]
cicflowmeter = "cicflowmeter.cli:main"
cicflowmeter-gui = "cicflowmeter.qtui.app:main"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
